lab1/Test/L1-A-10-19.output
Error Type A at Line 10
Error Type B at Line 15
Error Type B at Line 22
Error Type B at Line 35
Error Type A at Line 36
Error Type B at Line 37
Error Type A at Line 39
